# Ultimate-Console

./: .gitignore  CMakeLists.txt  README.md  UCconfig.hpp.in  ulticon.hpp
doc/: CMakeLists.txt  doxygen.conf.in
examples/: CMakeLists.txt  console_args.cpp  creating_option.cpp  keys.cpp  userdata_cin.cpp  variables.cpp
include/: argument.hpp  argw.hpp  callback.hpp  command.hpp  dictionary.hpp  indata.hpp  interface.hpp  lexer.hpp  option.hpp  semalyzer.hpp  synalyzer.hpp  uccmd.hpp  ucerr.hpp  variable.hpp
source/: cmd.cpp  dictionary.cpp  indata.cpp  interface.cpp  lexer.cpp  printerr.cpp  semalyzer.cpp  synalyzer.cpp
trace/: UC_trace.hpp.in  trace.cpp  trace.hpp
ulticon/: boolalphaoption.hpp  boolargument.hpp  booloption.hpp  callbackoption.hpp  intargument.hpp  intoption.hpp  printerror.hpp  stringargument.hpp  stringoption.hpp
